# UltimateFighterSFML

./: CMakeLists.txt  compile_commands.json  readme.md
.cache/clangd/index/: AsciiColor.cpp.81F7D2E1622D04BF.idx  AsciiColor.h.65B246BFF7DB077D.idx  BaseState.cpp.048F2178FDCE6BD8.idx  BaseState.h.F4D6EAC6068A0A56.idx  DebuggerControlledInformation.h.58B8D5E1EB4B0B6F.idx  Game.cpp.D6904A650034AD53.idx  Game.h.FCA8E48D12E24CD0.idx  GameState.cpp.9B934E0662C1BA5D.idx  GameState.h.048971A9E6EFEA40.idx  ImguiDebugger.cpp.A3964B0A4A0CE3A3.idx  ImguiDebugger.h.8DFCFF2D6F78B27A.idx  Logging.cpp.1CC955591B5D5436.idx  Logging.h.1A4C88483090F05F.idx  MainMenuState.cpp.5F9540231A55C7B7.idx  MainMenuState.h.00738B50386356E0.idx  MainWindow.cpp.247FA6D865F7DF9A.idx  MainWindow.h.8DF2A8DB104BDF20.idx  StateManager.cpp.68A78A435E6B0381.idx  StateManager.h.D9DA13A9E14C9801.idx  main.cpp.4FD1B4605451B40F.idx
dependencies/: CMakeLists.txt
src/: AsciiColor.cpp  BaseState.cpp  CMakeLists.txt  Game.cpp  GameState.cpp  ImguiDebugger.cpp  Install.cmake  Logging.cpp  MainMenuState.cpp  MainWindow.cpp  StateManager.cpp  main.cpp
src/include/: BaseState.h  DebuggerControlledInformation.h  Game.h  ImguiDebugger.h  MainWindow.h  StateManager.h
src/include/States/: GameState.h  MainMenuState.h
src/include/utils/: AsciiColor.h  Logging.h
